abstract_client.cpp
@@ -703,7 +703,11 @@ void AbstractClient::minimize(bool avoid_animation)
     doMinimize();
 
     updateWindowRules(Rules::Minimize);
-    FocusChain::self()->update(this, FocusChain::MakeFirstMinimized);
+
+    if (options->moveMinimizedWindowsToEndOfTabBoxFocusChain()) {
+        FocusChain::self()->update(this, FocusChain::MakeFirstMinimized);
+    }
+
     // TODO: merge signal with s_minimized
     addWorkspaceRepaint(visibleRect());
     emit clientMinimized(this, !avoid_animation);
